1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>

	* get-identity.c (fshelp_get_identity): Use ports_class_iterate.

1998-12-19  Roland McGrath  <roland@baalperazim.frob.com>

	* fetch-root.c (fshelp_fetch_root): Cope when we have a null auth
	server port (pass our own ports).

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* fshelp.h (fshelp_set_options): Use `const' for `char *' parameter.
	* set-options.c (fshelp_set_options): Fix defn.

1998-08-21  Roland McGrath  <roland@baalperazim.frob.com>

	* Makefile (SRCS): Remove return-buffer.c.

1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* fshelp.h: Moved fshelp_return_malloced_buffer to libiohelp.
	* return-buffer.c: Moved to ../libiohelp/return-buffer.c.
	(fshelp_return_malloced_buffer): Renamed to iohelp_*.

Tue Jul  1 16:45:27 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* exec-reauth.c (fshelp_exec_reauth): If the new set of eff_uids
	is empty, then still do proc_setowner, but this time to set it to
	"unowned" status.

1997-06-12  Miles Bader  <miles@gnu.ai.mit.edu>

	* fshelp.h (fshelp_touch): New function.
	(TOUCH_ATIME, TOUCH_MTIME, TOUCH_CTIME): New macros.
	Include <maptime.h>.

1997-06-11  Miles Bader  <miles@gnu.ai.mit.edu>

	* fshelp.h (fshelp_fetch_root_callback1_t): Chage ARGZ_LEN to type
	size_t.

Fri Nov 15 14:43:44 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* fshelp.h (fshelp_access): Uh, shift bits the right direction.

Tue Nov 12 22:07:41 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* fetch-root.c (fshelp_fetch_root): Name idvec members correctly.

	* fshelp.h: <iohelp.h> -> <hurd/iohelp.h>.
	Include <sys/stat.h>.
	(fshelp_access): Declare `gotit'.

Wed Nov  6 17:49:33 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* fshelp.h (fshelp_fetch_root): Delete args `uids', `gids',
 	`uids_len', and `gids_len'.  New arg `user'.
	* fetch-root.c (fshelp_fetch_root): Ditto.

	* fshelp.h: Include <iohelp.h>.