@@ -1,3 +1,8 @@
+Sat Mar  6 17:03:02 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* start-translator-long.c (service_fsys_startup): Doc fixes, and
+ 	omit unused member `dead' from REQUEST.
+
 1999-02-28  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* get-identity.c (fshelp_get_identity): Use ports_class_iterate.
